JVM学习：运行时数据区学习